--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^7.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "nodemon": "^2.0.20"
   }
