--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,15 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@jest/types": "^29.4.3",
+    "@types/babel__core": "^7.20.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
-    "nodemon": "^2.0.20"
+    "jest": "^29.4.3",
+    "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1"
   }
 }
