--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
     "dev": "nodemon",
-    "test": "jest"
+    "test": "jest --coverage --watch"
   },
   "keywords": [],
   "author": "",
