--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/jest": "^29.4.0",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1"
   }
